kubernetes-volumes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homework-service
  namespace: homework
spec:
  type: ClusterIP
  selector:
    app: homework-app
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
